--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
                             
                 </ul>
             </div>
-            <div class="strength"> 
-                STRENGTH 
+            <div class="strength-box">
+                STRENGTH
+                <div class="strength"></div>
+                <div class="bar" id="one"></div>
+                <div class="bar" id="two"></div>
+                <div class="bar" id="three"></div>
+                <div class="bar" id="four"></div>
+                
             </div>
             <div class="generateBtn">
                 <button id="generate">GENERATE   -></button>
